# django-shopping-cart

./: README.md  manage.py  pyproject.toml
cartsite/: asgi.py  settings.py  urls.py  wsgi.py
shoppingcart/: admin.py  models.py  urls.py  views.py
shoppingcart/migrations/: 0001_initial.py  0002_product_quantity.py  0002_purchaseorder.py  0003_remove_product_quantity.py  0003_sale.py  0004_product_price_currency_alter_product_price.py  0005_alter_purchaseorderitem_purchase_order_productimage.py  0006_product_slug_alter_purchaseorderitem_quantity_and_more.py  0007_alter_product_slug.py  0008_alter_productimage_product.py
static/css/: stylesheet.css
templates/: base.html
templates/shoppingcart/: cart.html  checkout.html  details.html  home.html
templates/users/: login.html  register.html
users/: forms.py  models.py
users/migrations/: 0001_initial.py
