[tool.poetry]
name = "django-training-cart"
version = "0.1.0"
description = ""
authors = ["Joseph Matthew Caballas <joseph@mahusai.ph>"]

[tool.poetry.dependencies]
python = "^3.9"
django-environ = "^0.8.1"
Django = "^4.0.5"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
